# synless

./: .gitignore  Cargo.toml  Makefile  commands.txt  ideas.md  readme.md  todo.md
.github/workflows/: rust.yml
data/: contacts.json  json_lang.ron  keyhints_lang.ron  pokemon.json  selection_lang.ron  string_lang.ron
demo/: Cargo.toml
demo/src/: core_editor.rs  demo_keymaps.rs  engine.rs  error.rs  keymap.rs  keymap_lang.rs  main.rs  message_lang.rs  prog.rs  server.rs  shell_editor.rs  test_multilang_doc.rs
demo/src/data/: example_keymaps.rs  example_pane_notation.rs  keyhint_lang.rs  message_lang.rs  mod.rs
demo/src/keymaps/: factory.rs  keymap.rs  keymap_manager.rs  mod.rs  mode_and_menu.rs
doc/: commands.txt  design.md  editing_models.md  ideas.md  line_numbers.md  plan.md  pretty_printing_laws.md  readme.md  survey.md  walkthrough.md  why.md
editor/: Cargo.toml
editor/benches/: render_benchmark.rs
editor/examples/: demo.rs  prog.rs
editor/src/: command.rs  doc.rs  lib.rs  notationset.rs  text.rs
editor/src/ast/: ast.rs  ast_forest.rs  ast_ref.rs  mod.rs
editor/src/doc/: doc.rs
editor/src/test_util/: json_lang.rs  mod.rs  test_editor.rs
editor/tests/: test_json_doc.rs
editor/tests/common/: json_lang.rs  mod.rs
examples/crossterm/: cursor.rs  event.rs  fullwidth.rs  style.rs
examples/rhai/: bug_1.rs  bug_2.rs  custom_syntax.rs  hello_world.rs  module.rs  rust_loop.rs  script_loop.rs
experiment/: freezer.rs  language.rs
experiment/fast/: Cargo.toml
experiment/fast/src/: lib.rs  measure.rs  notation.rs  oracular_pretty_print.rs  partial_pretty_print.rs  pretty_print.rs  random_notation.rs  random_requirement.rs  requirement.rs  staircase.rs  validate.rs
experiment/fast/tests/: oracle_tests.rs  run_oracle.rs  test_pretty_print.rs  unit_tests.rs
experiment/tree/: cursor.rs  mod.rs  path.rs  tree.rs  tree_mut.rs  tree_ref.rs
forest/: Cargo.toml
forest/src/: forest.rs  forest2.rs  lib.rs  node.rs  node_slab.rs  tree.rs  tree2.rs  tree_ref.rs  tree_ref2.rs
forest/tests/: tests.rs
frontends/: Cargo.toml
frontends/examples/: simple_term.rs
frontends/src/: color_theme.rs  frontend.rs  key.rs  lib.rs  main.rs  terminal.rs
frontends/src/terminal/: screen_buf.rs  term_error.rs
language/: Cargo.toml
language/src/: construct.rs  language.rs  lib.rs  notation.rs  notationset.rs
language/src/ast/: ast.rs  ast_forest.rs  ast_ref.rs  forest.rs  mod.rs  text.rs
language/src/language/: construct.rs  grammar.rs  language.rs  language_set.rs  mod.rs
old-stuff/editor/: keymap.rs
old-stuff/render/: mod.rs
old-stuff/tree/: cursor.rs  node.rs  tree.rs  tree_mut.rs
pretty/: Cargo.toml
pretty/src/: lib.rs  notation.rs  notation_constructors.rs  notation_ops.rs  notation_visitor.rs  pane.rs  pane_notation.rs
pretty/src/examples/: json.rs  mod.rs
pretty/src/geometry/: bound.rs  mod.rs  pos.rs  range.rs  rect.rs  region.rs
pretty/src/layout/: bounds.rs  boundset.rs  compiled_notation.rs  compute_bounds.rs  compute_layout.rs  layout.rs  layout_debug_print.rs  mod.rs  notation_ops.rs  notation_walker.rs  staircase.rs
pretty/src/pane/: mod.rs  pane_notation.rs  proportionally_divide.rs
pretty/src/pretty/: example.rs  locate_cursor.rs  mod.rs  plain_text.rs  pretty.rs  pretty_doc.rs  pretty_formatter.rs  pretty_print.rs  pretty_screen.rs  pretty_window.rs  render_options.rs  testing.rs  viewport.rs
pretty/src/pretty_print/: mod.rs  pretty_doc.rs  pretty_print.rs  pretty_window.rs  viewport.rs
pretty/src/style/: color_theme.rs  mod.rs  style.rs
pretty/src/transcribe/: example.rs  mod.rs  (+1 more)
pretty/tests/: test_example_notation.rs  test_json_notation.rs
scripts/: base_module.rhai  init.rhai  main.rhai
src/: common.rs  construct.rs  coord.rs  editor.rs  experimental_tree.rs  geometry.rs  gom.rs  infra.rs  language.rs  lib.rs  main.rs  pretty_doc.rs  runtime.rs  style.rs  terminal.rs
src/doc/: cursor.rs  mod.rs
src/editor/: app.rs  command.rs  editor.rs  interpreter.rs  keymap.rs  layer.rs  menu.rs  mod.rs  runtime.rs  stack.rs
src/engine/: command.rs  doc.rs  doc_command.rs  doc_set.rs  engine.rs  mod.rs  search.rs
src/experiment/: forest.rs  gom.rs  mod.rs
src/forest/: mod.rs  subtree_mut.rs  subtree_ref.rs  tree.rs  tree_ref.rs
src/frontends/: frontend.rs  key.rs  mod.rs  screen_buf.rs  terminal.rs
src/keymap/: keymap.rs  layer.rs  menu.rs  mod.rs
src/language/: ast.rs  compiled.rs  construct.rs  forest.rs  grammar.rs  indexed_map.rs  interface.rs  language.rs  language_set.rs  location.rs  mod.rs  node.rs  notation.rs  specs.rs  storage.rs  text.rs
src/parsing/: json_parser.rs  json_tokenizer.rs  mod.rs
src/render/: locate_cursor.rs  mod.rs  position_screen.rs  render.rs  write.rs
src/style/: color_theme.rs  mod.rs  style.rs
src/syntax/: bounds.rs  construct.rs  find_bounds.rs  layout.rs  layout_basic.rs  layout_region.rs  mod.rs  syntax.rs
src/tree/: cursor.rs  forest.rs  location.rs  mod.rs  node.rs  text.rs  tree.rs  tree_ref.rs
src/util/: bug.rs  error.rs  fs_util.rs  fuzzy_search.rs  indexed_map.rs  log.rs  mod.rs  ordered_map.rs
syntax/: Cargo.toml
syntax/src/: lib.rs  syntax.rs
tests/: json.rs  keyhint.rs  selection.rs  tests.rs
utility/: Cargo.toml
utility/src/: grow_only_map.rs  lib.rs  utilities.rs
(+40 files in other folders)
