[package]
name = "synless"
version = "0.0.1"
edition = "2021"
authors = ["justinpombrio <zallambo@gmail.com>", "e-matteson <e.r.matteson@gmail.com>"]

[dependencies]
thiserror = "1.0"
bit-set = "0.5"
typed-arena = "2.0"
generational-arena = "0.2"
crossterm = "0.27.0"
[dependencies.partial-pretty-printer]
    git = "https://github.com/justinpombrio/partial-pretty-printer"
[dependencies.no-nonsense-flamegraphs]
    version = "0.2.*"
    git = "https://github.com/justinpombrio/no-nonsense-flamegraphs"
    optional = true

[features]
default = []
profile = ["no-nonsense-flamegraphs"]

[[example]]
name = "crossterm_cursor"
path = "examples/crossterm/cursor.rs"

[[example]]
name = "crossterm_style"
path = "examples/crossterm/style.rs"

[[example]]
name = "crossterm_event"
path = "examples/crossterm/event.rs"
