[package]
name = "demo"
version = "0.1.0"
authors = ["e-matteson <e.r.matteson@gmail.com>"]
edition = "2018"

[dependencies]
editor = { path = "../editor" }
forest = { path = "../forest" }
pretty = { path = "../pretty" }
language = { path  = "../language" }
frontends = { path = "../frontends"}
utility = { path = "../utility"}
lazy_static = "*"
thiserror = "1.0"