[package]
name = "editor"
version = "0.1.0"
authors = ["Justin <zallambo@gmail.com>"]
edition = "2018"

[dependencies]
forest = { path = "../forest" }
language = { path  = "../language" }
utility = { path  = "../utility" }

lazy_static = "*"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "render_benchmark"
harness = false
