[package]
workspace = ".."
name = "frontends"
version = "0.1.0"
authors = ["Justin Pombrio <justinpombrio@cs.brown.edu>", "e-matteson <e.r.matteson@gmail.com>"]
edition = "2018"

[dependencies]
partial-pretty-printer = { git = "https://github.com/justinpombrio/partial-pretty-printer" }
termion = "1.5"
thiserror = "1.0"

