[package]
workspace = ".."
name = "language"
version = "0.1.0"
authors = ["Justin Pombrio <justinpombrio@cs.brown.edu>"]
edition = "2018"

[dependencies]
utility = { path = "../utility" }
forest = { path = "../forest" }
partial-pretty-printer = { git = "https://github.com/justinpombrio/partial-pretty-printer" }
lazy_static = "*"
typed-arena = "*"
