[package]
workspace = ".."
name = "language"
version = "0.1.0"
authors = ["Justin Pombrio <justinpombrio@cs.brown.edu>"]
edition = "2018"

[dependencies]
forest = { path = "../forest" }
partial-pretty-printer = { git = "https://github.com/justinpombrio/partial-pretty-printer" }
typed-arena = "*"
generational-arena = "0.2"
